Change client button text

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -49,13 +49,13 @@ es:
         links:
           view: "Ver todos"
           subnav: "Administra los siguientes clientes"
-          show_surveys: "VER LISTADO DE ENCUESTAS"
+          show_surveys: "VER ENCUESTAS"
           customer_all: "LISTAR CLIENTES"
           customer_new: "NUEVO CLIENTE"
           customer_show: "Mostrar información del cliente"
           customer_edit: "Editar información del cliente"
           customer_archive: "Archivar cliente"
-          survey_new: "Crear nueva encuesta"
+          survey_new: "Nueva encuesta"
           avatar_upload: "Sube una imágen"
           avatar_text: "La imágen debe tener un tamaño máximo de 1200x600"
           avatar_remove: "Elimina esta imágen"
